feat: adjust getting started structure

--- a/src/docs/guides/general/concepts.en-US.mdx
+++ b/src/docs/guides/general/concepts.en-US.mdx
@@ -35,6 +35,7 @@ You can combine Univer's plugins to customize a Univer application that meets yo
 You need to load a snapshot in Univer to load a document. Each type of document provides its own snapshot format. Please refer to the above API documentation to learn how to write a snapshot that meets the format requirements:
 
 1. The snapshot format of a spreadsheet is [`IWorkbookData`](/typedoc/@univerjs/core/interfaces/IWorkbookData).
+  1. [Configure Cell Data](guides/sheet/getting-started/cell-data) gives a detailed introduction to the data structure of cells.
 2. The snapshot format of a document is [`IDocumentData`](/typedoc/@univerjs/core/interfaces/IDocumentData).
 
 Functional plugins can store resources, such as images, etc., through the `resources` field. For more information, see [Plugin Custom Model](/guides/sheet/advanced/custom-model).
