--- a/src/docs/guides/general/server/usip.en-US.mdx
+++ b/src/docs/guides/general/server/usip.en-US.mdx
@@ -57,6 +57,7 @@ curl -X GET \
 - The Bulk User Info Retrieval interface accepts a `userIDs` string array parameter where each element represents a user identifier `userID`.
 - The interface returns an array of `User` objects.
 - The `userIDs` array max size is 100.
+- After 0.2.9 version (not include 0.2.9) this api of `GET` method will be deprecated.
 
 ```shell
 curl -X POST "http://localhost:8080/userinfo" \
@@ -98,6 +99,7 @@ curl -X GET "http://localhost:8080/role?unitID=xxx&userID=xxx"
 
 - The Get Collaborator List interface should accept a `unitIDs` string array parameter, allowing retrieval of collaborator lists for multiple documents simultaneously.
 - The `unitIDs` array max size is 100.
+- After 0.2.9 version (not include 0.2.9) this api of `GET` method will be deprecated.
 
 ```shell
 curl -X POST "http://localhost:8080/collaborators" \
