--- a/src/docs/guides/sheet/facade/sheet-api.zh-CN.mdx
+++ b/src/docs/guides/sheet/facade/sheet-api.zh-CN.mdx
@@ -458,7 +458,7 @@ const workbook = univerAPI.getActiveWorkbook();
 const worksheet = workbook.getActiveSheet();
 const A1_J10 = worksheet.getRange(0, 0, 10, 10);
 
-A1_J10.attachPopupToCell({
+A1_J10.attachPopup({
     componentKey: () => <div style={{ width: 100, height: 100, background: '#fff' }}>popup content</div>,
 });
 ```
