--- a/src/docs/guides/sheet/features/thread-comment.en-US.mdx
+++ b/src/docs/guides/sheet/features/thread-comment.en-US.mdx
@@ -139,4 +139,10 @@ comment?.getReplies();
 
 // get range of this comment
 comment?.getRange();
+
+// event
+workbook.onBeforeUpdateThreadComment
+workbook.onBeforeDeleteThreadComment
+workbook.onBeforeAddThreadComment
+workbook.onThreadCommentChange
 ```
