--- a/src/docs/guides/sheet/features/thread-comment.zh-CN.mdx
+++ b/src/docs/guides/sheet/features/thread-comment.zh-CN.mdx
@@ -93,36 +93,56 @@ univer.registerPlugin(UniverSheetsThreadCommentBasePlugin);
 univer.registerPlugin(UniverSheetsThreadCommentPlugin);
 ```
 
-## API
+## Facade API <VersionBadge version="0.2.10+" />
 
-完整API请参考 [@univerjs/sheets-thread-comment](/typedoc/@univerjs/sheets-thread-comment/README)
+完整 facade api 类型定义，请查看 [FacadeAPI](/typedoc/@univerjs/facade/README)
 
-## 使用Command
-
+### 示例
 ```typescript
-import {
-  AddCommentCommand,
-  DeleteCommentCommand,
-  UpdateCommentCommand,
-  ResolveCommentCommand,
-  DeleteCommentTreeCommand,
-} from '@univerjs/sheets-thread-comment';
-import type {
-  IAddCommentCommandParams,
-  IDeleteCommentCommandParams,
-  IResolveCommentCommandParams,
-  IUpdateCommentCommandParams,
-  IDeleteCommentTreeCommandParams,
-} from '@univerjs/sheets-thread-comment';
+const univerAPI = FUniver.newAPI(univer);
 
-// Add comment by command
-const commandService = univer.__getInjector().get(ICommandService);
+// get cell
+const workbook = univerAPI.getActiveWorkbook();
+const worksheet = workbook.getActiveSheet();
+// comment only attch to single cell, if range is A1_J10 equal A1
+const A1 = worksheet.getRange(0, 0, 1, 1);
 
-commandService.executeCommand(AddCommentCommand.id, {
-  unitId: 'unitId',
-  subUnitId: 'subUnitId',
-  comment: {
-    // comment content
-  },
-} as IAddCommentCommandParams);
+// add comment to empty cell
+A1.addComment({
+    dataStream: 'hello world\r\n',
+});
+
+// reply to current comment
+A1.addComment({
+    dataStream: 'reply\r\n',
+});
+
+
+A1.clearComment();
+
+// get comment
+const comment = A1.getComment();
+
+// update content
+comment?.update({
+    dataStream: 'hello world222\r\n',
+});
+
+// delete comment
+comment?.delete();
+
+// resolve comment
+comment?.resolve();
+
+// get replies
+comment?.getReplies();
+
+// get range of this comment
+comment?.getRange();
+
+// event
+workbook.onBeforeUpdateThreadComment
+workbook.onBeforeDeleteThreadComment
+workbook.onBeforeAddThreadComment
+workbook.onThreadCommentChange
 ```
