--- a/src/docs/guides/sheet/features/thread-comment/facade.en-US.mdx
+++ b/src/docs/guides/sheet/features/thread-comment/facade.en-US.mdx
@@ -50,5 +50,6 @@ comment?.getRange();
 workbook.onBeforeUpdateThreadComment
 workbook.onBeforeDeleteThreadComment
 workbook.onBeforeAddThreadComment
+// comment change event include add, update, delete
 workbook.onThreadCommentChange
 ```
