--- a/src/docs/guides/sheet/features/data-validation.en-US.mdx
+++ b/src/docs/guides/sheet/features/data-validation.en-US.mdx
@@ -50,6 +50,7 @@ const univer = new Univer({
   locale: LocaleType.EN_US,
   locales: {
     [LocaleType.EN_US]: Tools.deepMerge(
+      // ...other_locales,
       SheetsDataValidationEnUS
     ),
   },
