--- a/src/docs/guides/sheet/features/data-validation.zh-CN.mdx
+++ b/src/docs/guides/sheet/features/data-validation.zh-CN.mdx
@@ -50,6 +50,7 @@ const univer = new Univer({
   locale: LocaleType.ZH_CN,
   locales: {
     [LocaleType.ZH_CN]: Tools.deepMerge(
+      // ...other_locales,
       SheetsDataValidationZhCN
     ),
   },
