--- a/src/docs/guides/sheet/getting-started/quickstart.en-US.mdx
+++ b/src/docs/guides/sheet/getting-started/quickstart.en-US.mdx
@@ -25,13 +25,21 @@ If you prefer to start with a local development environment, you can use the fol
 
 <Tabs items={['pnpm', 'npm']}>
   <Tabs.Tab label="pnpm">
+    Run the following command requires your device has `nodejs >= 18`, `pnpm >= 7` and `git` installed.
+
     ```shell
-    pnpm dlx degit dream-num/univer-sheet-start-kit [your-app-name]
+    pnpm dlx degit dream-num/univer-sheet-start-kit
+    cd univer-sheet-start-kit
+    pnpm install && pnpm dev
     ```
   </Tabs.Tab>
   <Tabs.Tab label="npm">
+    Run the following command requires your device has `nodejs >= 18`, `npm >= 8` and `git` installed.
+
     ```shell
-    npx degit dream-num/univer-sheet-start-kit [your-app-name]
+    npx degit dream-num/univer-sheet-start-kit
+    cd univer-sheet-start-kit
+    npm install && npm run dev
     ```
   </Tabs.Tab>
 </Tabs>
@@ -57,10 +65,12 @@ Of course, you may want more than just the basics. If you're looking to add feat
 
   <Tabs items={['pnpm', 'npm', 'Without package manager']}>
     <Tabs.Tab label="pnpm">
+      Run the following command requires your device has `nodejs >= 18`, `pnpm >= 7` and `git` installed.
+
       ```shell
-      pnpm dlx degit dream-num/univer-pro-sheet-start-kit [your-app-name]
-      cd [your-app-name] && pnpm install # pnpm version >= 8
-      pnpm dev
+      pnpm dlx degit dream-num/univer-pro-sheet-start-kit
+      cd univer-pro-sheet-start-kit
+      pnpm install && pnpm dev
       ```
       <Callout emoji="⚠️">
         If you deploy the server on a different machine, you need to update the `server` configuration in `vite.config.ts` by changing `localhost` to the machine's IP address.
@@ -72,10 +82,12 @@ Of course, you may want more than just the basics. If you're looking to add feat
     </Tabs.Tab>
 
     <Tabs.Tab label="npm">
+      Run the following command requires your device has `nodejs >= 18`, `npm >= 8` and `git` installed.
+
       ```shell
-      npx degit dream-num/univer-pro-sheet-start-kit [your-app-name]
-      cd [your-app-name] && npm install # npm version >= 7
-      npm run dev
+      npx degit dream-num/univer-pro-sheet-start-kit
+      cd univer-pro-sheet-start-kit
+      npm install && npm run dev
       ```
       <Callout emoji="⚠️">
         If you deploy the server on a different machine, you need to update the `server` configuration in `vite.config.ts` by changing `localhost` to the machine's IP address.
