--- a/src/docs/guides/sheet/facade/sheet-api.en-US.mdx
+++ b/src/docs/guides/sheet/facade/sheet-api.en-US.mdx
@@ -2,6 +2,7 @@ import { Callout } from 'nextra/components'
 import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 import ReactLive from '@/components/ReactLive'
 import ServerNotice from '@/components/ServerNotice'
+import VersionBadge from '@/components/VersionBadge'
 
 # Univer Sheet API
 
