--- a/src/docs/guides/sheet/getting-started/installation.zh-CN.mdx
+++ b/src/docs/guides/sheet/getting-started/installation.zh-CN.mdx
@@ -303,11 +303,11 @@ const univerAPI = FUniver.newAPI(univer);
 然后你就可以通过调用 `univerAPI` 的方法来使用 Univer 了，例如获取当前激活的 sheet，并在指定的范围更新值：
 
 ```typescript
-const activeSheet = univerAPI.getActiveWorkbook().getActiveSheet();
+const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
 
 // A1 设置数字 1
-const range1 = activeSheet.getRange(0, 0, 1, 1);
-range1.setValue(1);
+const range = sheet.getRange(0, 0, 1, 1);
+range.setValue(1);
 ```
 
 ### 存储数据
