--- a/src/docs/guides/sheet/facade/sheet-api.en-US.mdx
+++ b/src/docs/guides/sheet/facade/sheet-api.en-US.mdx
@@ -824,6 +824,12 @@ range.attachPopup({
 ```
 
 ### add float dom to sheet <VersionBadge version="0.2.10+" />
+
+[demo](https://stackblitz.com/edit/awesome-univer-sheets-vite-demo-fqsu99?file=package.json,src%2Fmain.tsx)
+1. Depends on `@univerjs/sheets-drawing-ui` plugin
+2. Needs to be called after univer rendering is completed
+3. `componentKey` must pass the registered component id or react/vue3 component. If it is vue3 component, it must be marked isVue3
+
 ```tsx
 const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
 
