--- a/src/docs/guides/sheet/facade/sheet-api.en-US.mdx
+++ b/src/docs/guides/sheet/facade/sheet-api.en-US.mdx
@@ -818,9 +818,16 @@ activeWorkbook.onSelectionChange((selection) => {
 const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
 const range = sheet.getRange(0, 0, 10, 10); // A1:J10
 
-range.attachPopup({
+// attach popup to the first cell of range
+const disposeable = range.attachPopup({
+  // componentKey must be a componet or a key of registered component 
     componentKey: () => <div style={{ width: 100, height: 100, background: '#fff' }}>popup content</div>,
+    // if componentKey is a vue3 component, you must set isVue3 to true
+    // isVue3: true,
 });
+
+// remove the popup
+disposeable.dispose();
 ```
 
 ### add float dom to sheet <VersionBadge version="0.2.10+" />
@@ -831,26 +838,31 @@ range.attachPopup({
 3. `componentKey` must pass the registered component id or react/vue3 component. If it is vue3 component, it must be marked isVue3
 
 ```tsx
-const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
-
-sheet.addFloatDomToPosition({
+const disposeable = worksheet.addFloatDomToPosition({
+    // componentKey must be a componet or a key of registered component 
     componentKey: ({ data }) => (
         <div style={{ width: '100%', height: '100%', background: '#fff' }}>
             popup content
             {data?.label}
         </div>
     ),
+    // if componentKey is a vue3 component, you must set isVue3 to true
+    // isVue3: true,
     initPosition: {
         startX: 100,
         endX: 200,
         startY: 100,
         endY: 200,
     },
+
     // data of this component
     data: {
         label: 'hahah',
     },
 });
+
+// remove the float dom
+disposeable.dispose();
 ```
 
 ## Server-Related Features
