docs: cell data custom description

--- a/src/docs/guides/sheet/getting-started/cell-data.en-US.mdx
+++ b/src/docs/guides/sheet/getting-started/cell-data.en-US.mdx
@@ -453,7 +453,7 @@ If the cell is a boolean type, the value of `cellData.v` is stored as `0` or `1`
 
 ### Custom Field
 
-`cellData.custom` is an object that represents a custom field. You can put any data that complies with the JSON format into it to customize the storage of some additional information.
+`cellData.custom` is an object that represents a custom field. You can put any data that complies with the JSON format into it to customize the storage of some additional information. It is updated as cells are added, deleted, modified, or checked.
 
 ```typescript
 // IWorksheetData
