--- a/src/docs/guides/sheet/getting-started/cell-data.zh-CN.mdx
+++ b/src/docs/guides/sheet/getting-started/cell-data.zh-CN.mdx
@@ -453,7 +453,7 @@ cellData 的结构如下
 
 ### 自定义字段
 
-`cellData.custom` 是一个对象，表示自定义字段。其中可以放入任何符合 JSON 格式的数据，用于自定义存储一些额外的信息。
+`cellData.custom` 是一个对象，表示自定义字段。其中可以放入任何符合 JSON 格式的数据，用于自定义存储一些额外的信息。它跟随单元格的增删改查一同更新。
 
 ```typescript
 // IWorksheetData
