docs: update docs

--- a/src/docs/guides/sheet/getting-started/installation.en-US.mdx
+++ b/src/docs/guides/sheet/getting-started/installation.en-US.mdx
@@ -131,9 +131,7 @@ univer.registerPlugin(UniverUIPlugin, {
   container: 'app',
 });
 
-univer.registerPlugin(UniverDocsPlugin, {
-  hasScroll: false,
-});
+univer.registerPlugin(UniverDocsPlugin);
 univer.registerPlugin(UniverDocsUIPlugin);
 
 univer.registerPlugin(UniverSheetsPlugin);
@@ -158,9 +156,7 @@ univer.registerPlugin(UniverUIPlugin, {
   container: 'app',
 });
 
-univer.registerPlugin(UniverDocsPlugin, {
-  hasScroll: false,
-});
+univer.registerPlugin(UniverDocsPlugin);
 univer.registerPlugin(UniverDocsUIPlugin);
 
 univer.registerPlugin(UniverSheetsPlugin);
@@ -227,9 +223,7 @@ Current mainstream CDN service providers (such as jsDelivr and unpkg) support Un
       container: "app",
     });
 
-    univer.registerPlugin(UniverDocs.UniverDocsPlugin, {
-      hasScroll: false,
-    });
+    univer.registerPlugin(UniverDocs.UniverDocsPlugin);
     univer.registerPlugin(UniverDocsUi.UniverDocsUIPlugin);
 
     univer.registerPlugin(UniverSheets.UniverSheetsPlugin);
