--- a/src/docs/guides/sheet/facade/sheet-api.zh-CN.mdx
+++ b/src/docs/guides/sheet/facade/sheet-api.zh-CN.mdx
@@ -36,9 +36,7 @@ univer.registerPlugin(UniverUIPlugin, {
   container: 'app',
 });
 
-univer.registerPlugin(UniverDocsPlugin, {
-  hasScroll: false,
-});
+univer.registerPlugin(UniverDocsPlugin);
 univer.registerPlugin(UniverDocsUIPlugin);
 
 univer.registerPlugin(UniverSheetsPlugin);
@@ -118,9 +116,7 @@ univer.registerPlugin(UniverUIPlugin, {
   container: 'app',
 });
 
-univer.registerPlugin(UniverDocsPlugin, {
-  hasScroll: false,
-});
+univer.registerPlugin(UniverDocsPlugin);
 univer.registerPlugin(UniverDocsUIPlugin);
 
 univer.registerPlugin(UniverSheetsPlugin);
