--- a/src/docs/guides/sheet/features/core.en-US.mdx
+++ b/src/docs/guides/sheet/features/core.en-US.mdx
@@ -44,6 +44,7 @@ import { UniverDocsPlugin } from "@univerjs/docs";
 import { UniverDocsUIPlugin } from "@univerjs/docs-ui";
 
 import { UniverSheetsPlugin } from "@univerjs/sheets";
+import { UniverSheetsNumfmtPlugin } from "@univerjs/sheets-numfmt";
 import { UniverSheetsFormulaPlugin } from "@univerjs/sheets-formula";
 import { UniverSheetsUIPlugin } from "@univerjs/sheets-ui";
 ```
@@ -85,13 +86,12 @@ univer.registerPlugin(UniverUIPlugin, {
   container: 'app',
 });
 
-univer.registerPlugin(UniverDocsPlugin, {
-  hasScroll: false,
-});
+univer.registerPlugin(UniverDocsPlugin);
 univer.registerPlugin(UniverDocsUIPlugin);
 
 univer.registerPlugin(UniverSheetsPlugin);
 univer.registerPlugin(UniverSheetsUIPlugin);
+univer.registerPlugin(UniverSheetsNumfmtPlugin);
 univer.registerPlugin(UniverSheetsFormulaPlugin);
 
 univer.createUnit(UniverInstanceType.UNIVER_SHEET, {});
