--- a/src/docs/guides/sheet/features/core.zh-CN.mdx
+++ b/src/docs/guides/sheet/features/core.zh-CN.mdx
@@ -85,9 +85,7 @@ univer.registerPlugin(UniverUIPlugin, {
   container: 'app',
 });
 
-univer.registerPlugin(UniverDocsPlugin, {
-  hasScroll: false,
-});
+univer.registerPlugin(UniverDocsPlugin);
 univer.registerPlugin(UniverDocsUIPlugin);
 
 univer.registerPlugin(UniverSheetsPlugin);
