--- a/src/docs/guides/sheet/getting-started/quickstart.zh-CN.mdx
+++ b/src/docs/guides/sheet/getting-started/quickstart.zh-CN.mdx
@@ -242,9 +242,7 @@ import { Callout } from 'nextra/components'
                 [UniverCore.IUndoRedoService, null]
               ]
             });
-            univer.registerPlugin(UniverDocs.UniverDocsPlugin, {
-              hasScroll: false,
-            });
+            univer.registerPlugin(UniverDocs.UniverDocsPlugin);
 
             univer.registerPlugin(UniverEngineRender.UniverRenderEnginePlugin);
             univer.registerPlugin(UniverEngineFormula.UniverFormulaEnginePlugin);
